[package]
name = "hyperv"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
bitflags = "1.2"
futures = "0.3"
libredox = "0.1.3"
orbclient = "0.3.47"
redox_event = "0.4.1"
redox_syscall = "0.5"
redox-daemon = "0.1"

common = { path = "../common" }
pcid = { path = "../pcid" }
driver-network = { path = "../net/driver-network" }
